# ztfimg

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: conf.py  index.rst  requirements.txt  ztfimg.rst
docs/notebooks/: aperture.ipynb  catalogs.ipynb  coordinates.ipynb  quadrant_ccd_focalplane.ipynb  quickstart.ipynb  source_extraction.ipynb  ztfimg_rawccd_rawquadrant.ipynb  ztfimgdask.ipynb
docs/notebooks/.ipynb_checkpoints/: ztfimgdask-checkpoint.ipynb
tutorials/: tutorial_RawImages_and_Merges.ipynb  tutorial__AperturePhotometry.ipynb
ztfimg/: __init__.py  aperture.py  astrometry.py  base.py  catalog.py  catalogs.py  collection.py  dao.py  dask.py  image.py  io.py  matching.py  raw.py  science.py  stamps.py  tools.py
ztfimg/data/: ccd_amp_coeff_v2.txt  linearity_coeffs_201803.txt  linearity_coeffs_202004.txt
ztfimg/utils/: astrometry.py  decorators.py  rawglow.py  tools.py  vignets.py
ztfphot/: image.py
