[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "ztfimg"
authors = [
    {name = "Mickael Rigault", email = "m.rigault@ipnl.in2p3.fr"},
]
description = "ZTF Images tools"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "dask",
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "sep",
    "ztfquery",
    # "ztfsensors",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["nbsphinx", "numpydoc", "sphinx-book-theme", "sphinx_copybutton"]

[project.urls]
repository = "https://github.com/MickaelRigault/ztfimg"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ztfimg*"]

[tool.setuptools.package-data]
"*" = [ "data/*" ]

[tool.setuptools_scm]
write_to = "ztfimg/_version.py"

